--- a/templates/produit/liste.html.twig
+++ b/templates/produit/liste.html.twig
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="mb-4 text-primary">Liste des produits</h1>
+                <h1 class="mb-4 text-black text-center">Liste des produits</h1>
                 <table class="table table-striped table-hover table-bordered align-middle shadow-sm rounded">
                     <style>
                         .table th, .table td {
