--- a/templates/produit/liste.html.twig
+++ b/templates/produit/liste.html.twig
@@ -40,6 +40,9 @@
                             <td>{{ produit.prix }}</td>
                             <td>
                                 <a href="{{ path('produit_fiche', {'id': produit.id}) }}" class="btn btn-dark btn-sm">Voir</a>
+                                <form action="{{ path('produit_supprimer', {'id': produit.id}) }}" method="post" style="display:inline-block; margin-left:5px;" onsubmit="return confirm('Supprimer ce produit ?');">
+                                    <button type="submit" class="btn btn-danger btn-sm">Supprimer</button>
+                                </form>
                             </td>
                         </tr>
                     {% else %}
